@@ -1,0 +1,48 @@
+pre {
+    counter-reset: line-numbering;
+    background-color: #FFF;
+    background-image: -webkit-linear-gradient(#FFF 50%, #EEE 50%);
+    background-image:    -moz-linear-gradient(#FFF 50%, #EEE 50%);
+    background-image:     -ms-linear-gradient(#FFF 50%, #EEE 50%);
+    background-image:      -o-linear-gradient(#FFF 50%, #EEE 50%);
+    background-image:         linear-gradient(#FFF 50%, #EEE 50%);
+	
+    background-position: 0 1px;
+    background-repeat: repeat;
+    background-size: 40px 40px; /* background-size 2 x font-size*/
+	
+    border: 2px solid grey;
+    border-left: 12px solid green;
+    border-radius: 5px;
+    
+	color: black;
+    line-height: 20px;
+    padding: 20px 5px 20px 5px; /*top, right, bottom, left*/
+	font:normal 12px/20px Monaco,Monospace !important;
+}
+pre.code {
+  overflow: auto;
+}
+pre.code:before {
+  counter-reset: listing;
+}
+pre.code code {
+  counter-increment: listing;
+}
+pre.code code::before {
+  content: counter(line-numbering) " ";
+    counter-increment: line-numbering;
+  display: inline-table;
+  text-align: right;
+  opacity: 0.5;
+  padding-left: 8px;
+  width: 3em;
+  color: black;
+  border-right: 1px solid #999;
+  margin-left: auto;  
+}
+
+#text {
+	display: inline;
+    padding: 1px 5px 1px 5px; /*top, right, bottom, left*/
+}
